--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
     </div>
 
     <div id="copy">
-		<p class="text-center text-white text-sm">OG Creator <a
-			href="https://www.instagram.com/aoudumber.dev/reels/#">@aoudumber.dev</a></p>
+		<p class="text-center text-white text-sm"><Montums <a
 	  </div>
 </body>
 <script>
